# flows

./: Makefile  README.md  flow.yaml  pipeline_definition.py  pyproject.toml  python_scanner.py  test.py
definitions/: example.yaml
flows/: __main__.py  example.yaml  exceptions.py  pipeline_definition.py  python_scanner.py  run.py
flows/engine/: __init__.py  base_operator.py  end_operator.py  flow.py  flow_runner.py
flows/internal/: __init__.py  base.py  base_operator.py  python.py
flows/internal/filter/: __init__.py  version_1_0_0.py
flows/internal/python/: __init__.py  version_1_0_0.py
flows/internal/read/: __init__.py  version_1_0_0.py
flows/internal/save/: __init__.py  version_1_0_0.py
flows/internal/sql/: __init__.py  version_1_0_0.py
flows/models/: __init__.py  flow_model.py  tenant_model.py
flows/providers/flow_definitions/: __init__.py  base.py  factory.py  file_provider.py
flows/providers/secrets/: __init__.py  base.py  env_secrets.py  factory.py
flows/providers/tenants/: __init__.py  base.py  factory.py  file_provider.py
flows/sandbox/: parent.py  python.py  shim.py
flows/utils/: text.py  variable_resolver.py
internal/: __init__.py  python.py
sandbox/: python.py
tenants/acme_corp/: variables.yaml
test_files/definitions/: example.yaml
tests/: __init__.py
tests/planner/: test_flow_builder.py  test_version_matching.py
tests/steps/: test_python_step.py  test_read_step.py
