[project]
name = "flows"
version = "0.0.0"
description = "Data Flows"
dependencies = [
    "bandit",
    "opteryx",
    "orso",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "radon"
]

[tool.black]
line-length = 100
target-version = ["py312"]
fast = true

[tool.isort]
profile = "black"
src_paths = ["flows"]
extend_skip_glob = ["tests/**", "*.pyx"]
line_length = 100
multi_line_output = 9
force_single_line = true
float_to_top = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = 'py312'

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["SIM", "NPY201"]
ignore = []